--- a/index.html
+++ b/index.html
@@ -194,9 +194,14 @@
   </header>
 
   <section id="home" class="hero" style="position:relative;min-height:350px;background: url('logo in space.png') center/cover no-repeat;box-shadow:0 0 30px #39ff14;">
-    <div style="position:relative;z-index:1;padding-top:2.5rem;">
-      <h1>The Next Giant Leap Starts Here</h1>
-      <p style="background:rgba(13,0,31,0.7);display:inline-block;padding:0.5rem 1.5rem;border-radius:8px;">We’re not selling a ride—we’re opening a neon gateway to the cosmos. From Singapore’s floating nebula hub, breach the Kármán line, master weightlessness, and behold Earth’s iridescent curve.</p>
+    <div style="display:flex;align-items:center;justify-content:center;gap:2rem;width:100%;flex-wrap:wrap;position:relative;z-index:1;padding-top:2.5rem;">
+      <div style="flex:1 1 350px;min-width:260px;max-width:600px;text-align:left;">
+        <h1>The Next Giant Leap Starts Here</h1>
+        <p style="background:rgba(13,0,31,0.7);display:inline-block;padding:0.5rem 1.5rem;border-radius:8px;">We’re not selling a ride—we’re opening a neon gateway to the cosmos. From Singapore’s floating nebula hub, breach the Kármán line, master weightlessness, and behold Earth’s iridescent curve.</p>
+      </div>
+      <div style="flex:1 1 320px;min-width:220px;max-width:480px;display:flex;justify-content:center;align-items:flex-start;">
+        <img src="space video.gif" alt="Space Video Animation" style="width:75%;max-width:525px;margin-top:-1cm;border-radius:16px;box-shadow:0 0 20px #00d0ff;">
+      </div>
     </div>
     <div style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.25);z-index:0;"></div>
   </section>
